[gd_scene load_steps=7 format=2]

[ext_resource path="res://Evan/Rewards_V1.png" type="Texture" id=1]
[ext_resource path="res://ARCADECLASSIC.TTF" type="DynamicFontData" id=2]
[ext_resource path="res://Rewards.gd" type="Script" id=3]
[ext_resource path="res://TransitionScreen.tscn" type="PackedScene" id=4]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 2 )

[node name="Rewards" type="Control"]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 30.0
margin_top = 100.0
margin_right = 145.0
margin_bottom = 130.0

[node name="Button" type="Button" parent="VBoxContainer"]
margin_right = 115.0
margin_bottom = 23.0
custom_fonts/font = SubResource( 1 )
text = "Max Health"

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
margin_left = 165.0
margin_top = 100.0
margin_right = 290.0
margin_bottom = 130.0

[node name="Button" type="Button" parent="VBoxContainer2"]
margin_right = 125.0
margin_bottom = 23.0
custom_fonts/font = SubResource( 2 )
text = "Attack Damage"

[node name="TransitionScreen" parent="." instance=ExtResource( 4 )]

[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_Button1_pressed"]
[connection signal="pressed" from="VBoxContainer2/Button" to="." method="_on_Button2_pressed"]
